SERVER-73390  Mitigate database version regression bug on drop database ( cherry picked from 5780b40e0adf02427b5718f12959eae7d5e72939 )